add select input element containing distinct list of sale types from wishlist

--- a/chrome-extension/css/wishlist.css
+++ b/chrome-extension/css/wishlist.css
@@ -1,9 +1,10 @@
-.sale-data
-{
-	
+.sale-data{
 }
 
-.gameListPriceData
-{
+.gameListPriceData {
 	top: -2px !important;
+}
+
+.wishlist_sale_filter {
+	float: left;
 }
