fix styling and layout for items that are not on sale

--- a/chrome-extension/css/wishlist.css
+++ b/chrome-extension/css/wishlist.css
@@ -2,7 +2,12 @@
 }
 
 .gameListPriceData {
-	top: -2px !important;
+	top: 0px !important;
+	margin-top: 15px;
+}
+
+.gameListPriceData.saleType {
+	margin-top: -2px;
 }
 
 .wishlist_sale_filter {
